samples/_failures_safe/1761522803_8a8a24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdfda788.c: In function ‘main’:
./samples/SAFE/__tmp_bdfda788.c:177:12: error: missing terminating " character
  177 |     printf("Tokens:\n
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_bdfda788.c:177:5: error: expected expression at end of input
  177 |     printf("Tokens:\n
      |     ^~~~~~
./samples/SAFE/__tmp_bdfda788.c:177:5: error: expected declaration or statement at end of input
